Added TextView to keyboard for previewing speech before confirming it
Signed-off-by: hussu97 <h_abbasi97@hotmail.com>